@@ -536,6 +536,7 @@ export(plotFilterValues)
 export(plotLearnerPrediction)
 export(plotThreshVsPerf)
 export(plotTuneMultiCritResult)
+export(plotViperCharts)
 export(ppv)
 export(predictLearner)
 export(reimpute)
