@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{TuneMultiCritControl}
+\name{makeTuneMultiCritControlGrid}
 \alias{TuneMultiCritControl}
 \alias{TuneMultiCritControlGrid}
 \alias{TuneMultiCritControlNSGA2}
